--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8" /
+  <meta charset="utf-8"/ >
   </head>
   <body>
     <p>Hello, world! </p>
       </body>
-      
+
       </html>
